# simple-webhook

./: .gitignore  pyproject.toml  sample-post.sh
simple_webhook/: __init__.py  __main__.py  decorators.py  generate_self_signed_certs.py  server.py
